Revert "Initial commit."
This reverts commit f1fc1ef34b5222a6775350d9d6030e9d46644953.